--- a/contact.html
+++ b/contact.html
@@ -481,8 +481,8 @@
           <div class="footer-column">
             <h4>Policies</h4>
             <ul>
-              <li><a href="#">Terms & Conditions</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="termsandconditions.html">Terms & Conditions</a></li>
+              <li><a href="privacy_policy.html">Privacy Policy</a></li>
               <li><a href="#">Shipping Policy</a></li>
               <li><a href="#">Refund Policy</a></li>
               <li><a href="#">Cancellation Policy</a></li>
