--- a/media.html
+++ b/media.html
@@ -463,8 +463,8 @@
           <div class="footer-column">
             <h4>Policies</h4>
             <ul>
-              <li><a href="#">Terms & Conditions</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="termsandconditions.html">Terms & Conditions</a></li>
+              <li><a href="privacy_policy.html">Privacy Policy</a></li>
               <li><a href="#">Shipping Policy</a></li>
               <li><a href="#">Refund Policy</a></li>
               <li><a href="#">Cancellation Policy</a></li>
@@ -522,8 +522,8 @@
       <div class="footer-bottom">
         <p>© 2024 Krupa Corporation Private Limited. All rights reserved.</p>
         <div class="policies">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Legal Notice</a>
+          <a href="termsandconditions.html">Terms & Conditions</a>
+         <a href="privacy_policy.html">Privacy Policy</a>
           <a href="#">Report Security Issue</a>
         </div>
       </div>
