--- a/blog.html
+++ b/blog.html
@@ -236,7 +236,7 @@
     </script>
     <!-- <main> -->
     <iframe
-      src=" https://kconnect.krupacorp.com/ "
+      src="https://krupablog.ghost.io/ "
       width="100%"
       height="791vh"
       style="margin-top: 120px"
