--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       header {
         background-image: url(banner-1.gif);
         background-size: cover;
-        height: 900px;
+        background-position: center;
+/*         height: 900px; */
       }
       @media screen and (max-width: 500px) {
         header {
