--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         background-image: url(banner-1.gif);
         background-size: cover;
         background-position: center;
-/*         height: 900px; */
+        height: 900px;
       }
       @media screen and (max-width: 500px) {
         header {
