--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       }
       .flx {
         display: flex;
-        gap: 50px;
+        gap: 10px;
         justify-content: center;
         align-items: center;
       }
@@ -49,7 +49,7 @@
       .container {
         max-width: 1200px;
         margin: 0 auto;
-        padding: 50px;
+        padding: 30px;
       }
       .para p {
         font-size: 16px;
@@ -283,24 +283,17 @@
       });
     </script>
     <main>
-      <div class="container">
-        <div class="aboutus">
+      <div class="container" >
+        <div class="aboutus" >
           <h1>About Us</h1>
           <div class="flx">
             <p>
-              Krupa Corporation's strategic resource management underscores its
-              dedication to guiding India's economic path with wisdom and
-              foresight. By optimizing vital resources, the corporation
-              fortifies the nation's prosperity, ensuring sustainability for
-              generations to come. This commitment to responsible stewardship
-              highlights its pivotal role as guardian of India's invaluable
-              assets. Amidst the dynamic realm of technology and innovation,
-              Krupa Corporation shines as a catalyst for progress, spearheading
-              digital transformation and technological breakthroughs across
-              various sectors. Its innovative solutions not only streamline
-              operations but also enhance India's global standing, positioning
-              the nation as a frontrunner in an ever-evolving world.
+              At <b>Krupa Corp</b>, we are redefining the construction materials industry through innovation, efficiency, and strategic foresight. With a firm commitment to empowering businesses, we serve as a vital partner in India’s economic progress, delivering cutting-edge procurement solutions and fostering sustainable growth
+            <br>Our flagship tech platform, <b>Krupa Market</b>, connects distributors directly with enterprises, streamlining the procurement of construction materials. By embracing technology, we ensure cost-effectiveness, transparency, and scalability, enabling businesses to achieve more with less.  
+              <br>As a forward-thinking organization, we aim to position ourselves as a leader in the construction ecosystem. Competing with industry giants like <b>Infra.Market</b>, Krupa Corp stands out with a bold vision to combine innovation with responsible stewardship, driving transformative change in every aspect of our operations.  
+
             </p>
+            
             <img class="abt zoom" src="aboutus1.webp" alt="" />
           </div>
         </div>
@@ -309,38 +302,21 @@
         <h1>Our Vision</h1>
         <div
           class="para"
-          style="display: flex; flex-direction: column; gap: 10px"
+          style="display: flex; flex-direction: column; "
         >
           <p>
-            At Krupa Corporation, our vision transcends the conventional
-            boundaries of corporate success; it embodies a profound commitment
-            to shaping a future where prosperity, sustainability, and innovation
-            converge harmoniously. Rooted in a deep understanding of our role as
-            stewards of India's economic landscape, our vision is to pave the
-            way for a thriving society where every individual has the
-            opportunity to flourish and contribute meaningfully to the nation's
-            progress
+            Our vision extends beyond corporate success; it reflects a dedication to shaping a future where innovation, sustainability, and prosperity coexist. We strive to create a thriving ecosystem where businesses flourish and communities benefit from meaningful progress.  
           </p>
           <p>
-            Central to our vision is the relentless pursuit of excellence in
-            resource management, driven by a long-term perspective that
-            prioritizes the well-being of both current and future generations.
-            We envision a world where critical resources are utilized with
-            utmost efficiency, where investments in innovation and technology
-            empower us to overcome challenges and seize opportunities, and where
-            sustainability is not merely a goal but an intrinsic part of our
-            corporate DNA.
+            <h1>At Krupa Corp, we aim to:</h1>  
+            - Lead the construction industry through efficient resource management.  <br>
+            - Embrace technological advancements to tackle challenges and seize opportunities.  <br>
+            - Embed sustainability into every facet of our operations, ensuring a brighter future for generations to come. 
           </p>
           <p>
-            In realizing our vision, we aspire to be catalysts for positive
-            change, inspiring others to join us in our journey towards a more
-            prosperous, equitable, and sustainable future. Through strategic
-            partnerships, responsible business practices, and a commitment to
-            continuous improvement, we seek to leave a lasting legacy that
-            uplifts communities, preserves the environment, and enhances India's
-            global standing. At Krupa Corporation, our vision is not just a
-            destination; it's a guiding light that illuminates our path towards
-            a brighter tomorrow for all.
+            With *Krupa Market* as the cornerstone of our efforts, we continue to inspire and drive growth for businesses while leaving a lasting impact on the construction industry.  
+
+
           </p>
         </div>
         <div class="imgs">
@@ -434,8 +410,9 @@
       <div class="footer-bottom">
         <p>© 2024 Krupa Corporation Private Limited. All rights reserved.</p>
         <div class="policies">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Legal Notice</a>
+          <a href="termsandconditions.html">Terms & Conditions</a>
+          <a href="privacy_policy.html">Privacy Policy</a>
+         
           <a href="#">Report Security Issue</a>
         </div>
       </div>
