--- a/index.html
+++ b/index.html
@@ -1125,10 +1125,10 @@
           align-items: center;
         }
         .yt-section-inner {
-          width: 70%;
+          width: 100%;
           height: 70%;
           background-color: #f5f1e6;
-          border-radius: 10px;
+          /* border-radius: 10px; */
         }
         @media screen and (max-width: 500px) {
           .yt-main {
@@ -1276,8 +1276,8 @@
       <div class="footer-bottom">
         <p>© 2024 Krupa Corporation Private Limited. All rights reserved.</p>
         <div class="policies">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Legal Notice</a>
+          <a href="termsandconditions.html">Terms & Conditions</a>
+          <a href="privacy_policy.html">Privacy Policy</a>
           <a href="#">Report Security Issue</a>
         </div>
       </div>
