--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
       <div class="upper-nav">
         <div class="upper-nav-container">
           <div class="additional-links">
-            <a href="#">Infra Hub login</a>
+            <a href="#">krupa Market</a>
             <!-- <a href="blog.html">Blogs</a></li> -->
             <!-- <a href="#">Fraud Alert</a> -->
             <a href="media.html">Media Kit</a>
@@ -183,9 +183,7 @@
                     <h3>B2B Commerce</h3>
                     <a href="EProcurement.html">E Procurement</a>
 
-                    <h3>Strategic Ventures</h3>
-                    <a href="Retail.html">Retail</a>
-                    <!-- <a href="software-sol.html">Software Solutions</a> -->
+                    
                   </div>
                 </div>
               </div>
@@ -353,8 +351,7 @@
             <ul>
               <li><a href="termsandconditions.html">Terms & Conditions</a></li>
               <li><a href="privacy_policy.html">Privacy Policy</a></li>
-              <li><a href="#">Shipping Policy</a></li>
-              <li><a href="#">Refund Policy</a></li>
+              
               <li><a href="#">Cancellation Policy</a></li>
             </ul>
           </div>
@@ -384,8 +381,6 @@
               </li>
               <li><a href="contact.html">Contact us</a></li>
               <li><a href="http://krupainfrahub.com">Infrahub</a></li>
-              <li><a href="https://yumzy.shop/">Yumzy.Shop</a></li>
-              <li><a href="https://avinyamall.com/">Avinyamall.com</a></li>
             </ul>
           </div>
           <div class="footer-column">
