--- a/contact.html
+++ b/contact.html
@@ -256,7 +256,7 @@
       <div class="upper-nav">
         <div class="upper-nav-container">
           <div class="additional-links">
-            <a href="#">Infra Hub login</a>
+            <a href="#">krupa Market</a>
             <!-- <a href="blog.html">Blogs</a></li> -->
             <!-- <a href="#">Fraud Alert</a> -->
             <a href="media.html">Media Kit</a>
@@ -284,9 +284,7 @@
                     <h3>B2B Commerce</h3>
                     <a href="EProcurement.html">E Procurement</a>
 
-                    <h3>Strategic Ventures</h3>
-                    <a href="Retail.html">Retail</a>
-                    <!-- <a href="software-sol.html">Software Solutions</a> -->
+                   
                   </div>
                 </div>
               </div>
@@ -508,14 +506,11 @@
               <li><a href="aboutus.html">About</a></li> -->
               <li><a href="blog.html">Blog</a></li>
               <li>
-                <a href="https://www.linkedin.com/company/thekrupacorp/jobs/"
-                  >Careers</a
-                >
+                <a href="https://www.linkedin.com/company/thekrupacorp/jobs/">Careers</a>
               </li>
               <li><a href="contact.html">Contact us</a></li>
               <li><a href="http://krupainfrahub.com">Infrahub</a></li>
-              <li><a href="https://yumzy.shop/">Yumzy.Shop</a></li>
-              <li><a href="https://avinyamall.com/">Avinyamall.com</a></li>
+              
             </ul>
           </div>
           <div class="footer-column">
@@ -540,8 +535,8 @@
       <div class="footer-bottom">
         <p>© 2024 Krupa Corporation Private Limited. All rights reserved.</p>
         <div class="policies">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Legal Notice</a>
+          <a href="termsandconditions.html">Terms & Conditions</a>
+          <a href="privacy_policy.html">Privacy Policy</a>
           <a href="#">Report Security Issue</a>
         </div>
       </div>
