--- a/Retail.html
+++ b/Retail.html
@@ -263,8 +263,8 @@
         position: absolute;
         background-color: #f9f9f9;
         width: 700px;
-        /box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        /z-index: 1;
+        /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1; */
         padding: 30px;
 
         left: 100%;
@@ -328,7 +328,7 @@
       <div class="upper-nav">
         <div class="upper-nav-container">
           <div class="additional-links">
-            <a href="#">Infra Hub login</a>
+            <a href="#">krupa Market</a>
             <!-- <a href="blog.html">Blogs</a></li> -->
             <!-- <a href="#">Fraud Alert</a> -->
             <a href="media.html">Media Kit</a>
@@ -356,8 +356,7 @@
                     <h3>B2B Commerce</h3>
                     <a href="EProcurement.html">E Procurement</a>
 
-                    <h3>Strategic Ventures</h3>
-                    <a href="Retail.html">Retail</a>
+                    
                     <!-- <a href="software-sol.html">Software Solutions</a> -->
                   </div>
                 </div>
@@ -748,8 +747,7 @@
             <ul>
               <li><a href="termsandconditions.html">Terms & Conditions</a></li>
               <li><a href="privacy_policy.html">Privacy Policy</a></li>
-              <li><a href="#">Shipping Policy</a></li>
-              <li><a href="#">Refund Policy</a></li>
+              
               <li><a href="#">Cancellation Policy</a></li>
             </ul>
           </div>
@@ -779,8 +777,6 @@
               </li>
               <li><a href="contact.html">Contact us</a></li>
               <li><a href="http://krupainfrahub.com">Infrahub</a></li>
-              <li><a href="https://yumzy.shop/">Yumzy.Shop</a></li>
-              <li><a href="https://avinyamall.com/">Avinyamall.com</a></li>
             </ul>
           </div>
           <div class="footer-column">
@@ -805,8 +801,8 @@
       <div class="footer-bottom">
         <p>© 2024 Krupa Corporation Private Limited. All rights reserved.</p>
         <div class="policies">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Legal Notice</a>
+          <a href="termsandconditions.html">Terms & Conditions</a>
+          <a href="privacy_policy.html">Privacy Policy</a>
           <a href="#">Report Security Issue</a>
         </div>
       </div>
