--- a/software-sol.html
+++ b/software-sol.html
@@ -386,7 +386,7 @@
       <div class="upper-nav">
         <div class="upper-nav-container">
           <div class="additional-links">
-            <a href="#">Infra Hub login</a>
+            <a href="#">krupa Market</a>
             <!-- <a href="blog.html">Blogs</a></li> -->
             <!-- <a href="#">Fraud Alert</a> -->
             <a href="media.html">Media Kit</a>
@@ -414,9 +414,6 @@
                     <h3>B2B Commerce</h3>
                     <a href="EProcurement.html">E Procurement</a>
 
-                    <h3>Strategic Ventures</h3>
-                    <a href="Retail.html">Retail</a>
-                    <!-- <a href="software-sol.html">Software Solutions</a> -->
                   </div>
                 </div>
               </div>
@@ -703,10 +700,9 @@
           <div class="footer-column">
             <h4>Policies</h4>
             <ul>
-              <li><a href="#">Terms & Conditions</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Shipping Policy</a></li>
-              <li><a href="#">Refund Policy</a></li>
+              <li><a href="termsandconditions.html">Terms & Conditions</a></li>
+              <li><a href="privacy_policy.html">Privacy Policy</a></li>
+              
               <li><a href="#">Cancellation Policy</a></li>
             </ul>
           </div>
@@ -762,8 +758,8 @@
       <div class="footer-bottom">
         <p>© 2024 Krupa Corporation Private Limited. All rights reserved.</p>
         <div class="policies">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Legal Notice</a>
+          <a href="termsandconditions.html">Terms & Conditions</a>
+          <a href="privacy_policy.html">Privacy Policy</a>
           <a href="#">Report Security Issue</a>
         </div>
       </div>
