--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
       header {
-        background-image: url(banner-1.gif);
+        background-image: url(banner.png);
         background-size: cover;
         background-position: center;
         height: 900px;
