--- a/about.html
+++ b/about.html
@@ -288,7 +288,7 @@
             <p>
               At <b>Krupa Corp</b>, we are redefining the construction materials industry through innovation, efficiency, and strategic foresight. With a firm commitment to empowering businesses, we serve as a vital partner in India’s economic progress, delivering cutting-edge procurement solutions and fostering sustainable growth
             <br>Our flagship tech platform, <b>Krupa Market</b>, connects distributors directly with enterprises, streamlining the procurement of construction materials. By embracing technology, we ensure cost-effectiveness, transparency, and scalability, enabling businesses to achieve more with less.  
-              <br>As a forward-thinking organization, we aim to position ourselves as a leader in the construction ecosystem. Competing with industry giants like <b>Infra.Market</b>, Krupa Corp stands out with a bold vision to combine innovation with responsible stewardship, driving transformative change in every aspect of our operations.  
+              <br>As a forward-thinking organization, we aim to position ourselves as a leader in the construction ecosystem. Krupa Corp stands out with a bold vision to combine innovation with responsible stewardship, driving transformative change in every aspect of our operations.  
 
             </p>
             
