--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ footer {
         <div class="main-nav-container">
           <img
             src="logo-krupa.png"
-            alt="Reliance Industries Limited"
+            alt="krupa corporation"
             class="logo"
           />
           <ul class="nav-links">
